--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,14 @@ services:
       - ./data/db:/data/db
     ports:
       - "27017:27017"
+  nginx:
+    image: nginx
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - "./nginx-docker:/etc/nginx/conf.d"
+      # - "./docker/nginx/certs:/ssl"
 
   dental-api:
     build:
